feat: hsot can now manage smtp setting to enable email verification through settings page under system tab
